MCA App/Release/MCA Demo org/src/objects/XIRR_fieldNames__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Will store field names required for calculating xirr
Name of the record is name of SObject - Opportunity or Lead</description>
    <fields>
        <fullName>calculated_irr_field_apiName__c</fullName>
        <description>Will store the API name of the field that will display the calculated IRR on opportunity</description>
        <inlineHelpText>Enter the API Name for the field which will store the XIRR after it is calculated</inlineHelpText>
        <label>XIRR field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>commission_amount_field_apiName__c</fullName>
        <description>Will store the API Name of the field for input to xirr calculation</description>
        <inlineHelpText>Enter the API Name for the field which stores the Commission Amount (Expenses)</inlineHelpText>
        <label>Commissions (Expenses) field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>funding_amount_field_apiName__c</fullName>
        <description>Will store the API Name of the field for input to xirr calculation</description>
        <inlineHelpText>Enter the API Name for the field which stores the Funding Amount</inlineHelpText>
        <label>Funding Amount field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>month_field_apiName__c</fullName>
        <description>Will store the API Name of the field for input to xirr calculation</description>
        <inlineHelpText>Enter the API Name for the field which stores the Term (Months)</inlineHelpText>
        <label>Term (Months) field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payback_amount_field_apiName__c</fullName>
        <description>Will store the API Name of the field for input to xirr calculation</description>
        <inlineHelpText>Enter the API Name for the field which stores the Repayment Amount</inlineHelpText>
        <label>Repayment Amount field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>process_fee_field_apiName__c</fullName>
        <description>Will store the API Name of the field for input to xirr calculation</description>
        <inlineHelpText>Enter the API Name for the field which stores the Fees (Revenue)</inlineHelpText>
        <label>Fees (Revenue) field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Field Names</label>
</CustomObject>